--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.cubegameapp">
+    package="com.example.dicegame">
 
     <!-- App wird im Playstore nur für Geräte angeboten, die BLE unterstützen -->
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
@@ -41,7 +41,7 @@
         android:theme="@style/Theme.CubeGameApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.dicegame.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CubeGameApp.NoActionBar">
