--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
             android:name="com.example.dicegame.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.CubeGameApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
